--- a/PlantsWpf/packages.config
+++ b/PlantsWpf/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Brisebois.WindowsAzure" version="1.0.1.9" targetFramework="net452" />
   <package id="Common.Logging" version="3.0.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net452" />
+  <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net452" />
+  <package id="EnterpriseLibrary.WindowsAzure.TransientFaultHandling" version="5.1.1212.0" targetFramework="net452" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net452" />
   <package id="Extended.Wpf.Toolkit" version="2.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
@@ -28,5 +33,8 @@
   <package id="System.Net.Requests" version="4.0.11" targetFramework="net452" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net452" />
   <package id="Toolkit.WPF" version="1.0.5752.30721" targetFramework="net45" />
+  <package id="TransientFaultHandling.Core" version="5.1.1209.0" targetFramework="net452" />
+  <package id="Unity" version="2.1.505.0" targetFramework="net452" />
+  <package id="Unity.Interception" version="2.1.505.0" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="8.1.1" targetFramework="net452" />
 </packages>
